# pad-synth-face

./: .gitignore  LIMITATIONS.md  pyproject.toml
.claude/: settings.local.json
defid/: pyproject.toml
defid-demo-pkg/: pyproject.toml
defid-demo-pkg/tests/: test_adapter.py  test_app_smoke.py  test_demo_auth.py  test_qc.py  test_service_flow.py  test_smoke.py  test_windows.py
defid/tests/: conftest.py
pad-synth-core/: pyproject.toml
pad-synth-core/tests/: conftest.py  test_b1_finetune.py  test_baseline_extensions.py  test_eval_baseline.py  test_eval_baseline_subjects.py  test_eval_metrics.py  test_image_size_constant.py  test_manifest.py  test_models_zoo.py  test_ontology.py  test_orchestrator.py  test_provenance.py  test_provenance_dfdc.py  test_provenance_real_attack.py  test_qc_distribution.py  test_qc_per_sample.py  test_rng.py  test_smoke.py
pad-synth-face/: pyproject.toml
pad-synth-face/tests/: conftest.py  test_bonafide.py  test_bonafide_restrict.py  test_celeba_spoof_ingest.py  test_cli.py  test_commercial_bonafide_ingest.py  test_dfdc_ingest.py  test_dfdc_pipeline_integration.py  test_fixture_dfdc.py  test_fixture_real_attack.py  test_fixtures.py  test_mask_attack.py  test_pipeline_canonical_version.py  test_pipeline_dynamic_ontology_version.py  test_pipeline_e2e.py  test_pipeline_mask_only.py  test_prepare_digiface.py  test_print_attack.py  test_print_halftone.py  test_print_halftone_jitter.py  test_print_halftone_resolution.py  test_print_icc.py  test_print_v2_integration.py  test_real_attack_ingest.py  test_real_attack_wiring.py  test_real_configs.py  test_replay_attack.py  test_replay_resolution.py  test_sensor.py  test_sensor_a2.py  test_smoke.py  test_spark_configs.py  test_v21_configs.py  test_v2_configs.py
(+549 files in other folders)
