[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defid-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "defid",
    "pad-synth-core",
    "numpy>=1.26",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.uv.sources]
defid = { workspace = true }
pad-synth-core = { workspace = true }
