[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pad-synth-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
eval = ["torch>=2.2"]
