[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pad-synth-face"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pad-synth-core",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.uv.sources]
pad-synth-core = { workspace = true }
